# iconimation

./: .gitignore  Cargo.toml  README.md  makedemo.py  makedemo.sh  samples.txt  samples2.txt
.github/workflows/: rust.yml
demo/: demo.html
iconimation/: Cargo.toml
iconimation-cli/: Cargo.toml
iconimation-cli/src/: main.rs
iconimation-fmt/: Cargo.toml
iconimation-fmt/src/: main.rs
iconimation/src/: animate.rs  debug_pen.rs  error.rs  lib.rs  shape_pen.rs
resources/templates/: 00_SP_Lottie.json  00_SRP_Lottie.json  00_SR_Lottie.json  ScalePosition.json  ScalePositionStatic.json  Still.json  dsquare.json  shape_transition.json  shape_transition_2_stops.json  slide_down.json  slide_up.json  still.json  twirl.json
src/: animate.rs  debug_pen.rs  error.rs  lib.rs  main.rs  shape_pen.rs  transforms.rs
