[package]
name = "iconimation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
kurbo = "0.10"
skrifa = "0.15.1"
write-fonts = "0.21.0"  # pens
# should be a clone of https://github.com/rsheeter/bodymovin-rs
bodymovin = { path = "../bodymovin-rs" }
serde_json = "1.0"

ordered-float = "4.2"

thiserror = "1.0"