[package]
name = "iconimation-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
iconimation = { path = "../iconimation" }

serde_json = "1.0"

kurbo.workspace = true
skrifa.workspace = true