[package]
name = "iconimation-cli"
version = "0.1.0"
edition = "2021"

default-run = "iconimation-cli"  # feels like the wrong place...

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
iconimation = { path = "../iconimation" }

serde_json.workspace = true

kurbo.workspace = true
skrifa.workspace = true
bodymovin.workspace = true
