[package]
name = "iconimation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo.workspace = true
skrifa.workspace = true
bodymovin.workspace = true

write-fonts = "0.21.0"  # pens

thiserror = "1.0"

ordered-float = "4.2"